# proposition

./: README.md  Sample.hs  proposition.cabal  push.bat
Data/: Proposition.hs
Data/Proposition/: All.hs  BDD.hs  Char.hs  Fix.hs  Formula.hs  Internal.hs  Simple.hs
